--- a/TP_11/repartidores.css
+++ b/TP_11/repartidores.css
@@ -60,3 +60,26 @@ button:hover{
     cursor: pointer;
     background-color: lightgray;
 }
+.img{
+    width: 31px;
+    height: 26px;
+}
+.repartidor{
+    width: 150px;
+    height: 150px;
+}
+.bodi{
+    display: flex;
+    flex-wrap: wrap;
+}
+.ches{
+    border-radius: 15px;
+    margin: 20px;
+    background-color: brown;
+    display: flex;
+    width: 250px;
+    height: 220px;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+}
