--- a/TP_11/repartidores.css
+++ b/TP_11/repartidores.css
@@ -13,20 +13,20 @@ body{
     background-color: rgba(255, 166, 0, 0.664);
 }
 
-.header{
+header{
      background-color: black;
      display:flex;
      justify-content: space-between;
      align-items: center;
-     height: 90px;
-     padding: 15px;
+     padding: 10px;
 }
 
-.header .logo{
+.logo{
     cursor:pointer;
+    display: inline-block;
 }
 
-.header .logo img{
+.imgen{
     height: 70px;
     width: auto;
     transition: all 0.3s;
@@ -45,7 +45,8 @@ a:hover{
 .nav-links{
     display: flex;
     gap: 30px;
-    justify-content: space-between;
+    justify-content:center;
+    flex-grow: 1;
 }
 .lu:hover{
     font-size: x-large;
@@ -71,6 +72,7 @@ button:hover{
 .bodi{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .ches{
     border-radius: 15px;
